# python_ml

./: .gitignore  README.md  iris.ipynb  pyproject.toml
.ipynb_checkpoints/: iris-checkpoint.ipynb
